--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ header{
     margin-right: 30px;
     font-size: 14px;
     font-weight: 700;
+    color: #2F281E;
 }
 
 .nav_list:last-child{
@@ -282,8 +283,8 @@ header{
 }
 
 .pm-uc-img{
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .pm-uc-txt{
@@ -313,6 +314,9 @@ header{
     font-size: 88%;
 }
 
+.pm-two{
+
+}
 
 /*Marketers Use Case */
 
